--- a/src/com/warehouse/fxml/pickingMenu.fxml
+++ b/src/com/warehouse/fxml/pickingMenu.fxml
@@ -44,7 +44,7 @@
             </MenuButton>
         </children>
     </VBox>
-    <TableView fx:id="orderTableView" maxHeight="325.0" maxWidth="920.0" minHeight="325.0" minWidth="900.0"
+    <TableView fx:id="tableView" maxHeight="325.0" maxWidth="920.0" minHeight="325.0" minWidth="900.0"
                prefHeight="325.0" prefWidth="920.0">
         <columns>
             <TableColumn maxWidth="5000.0" minWidth="100.0" prefWidth="25.0" text="ID" fx:id="id"/>
